discussion/kv_engine/175583/175583_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Improve plain passwd checking

Change the plain password check to also try the hash values from
PBKDF2_HMAC_[SHAxxx] before falling back to using the PLAIN entry.

(This means that we can remove the PLAIN entry from cbsasl.pw if
there is at least one other hash)

Change-Id: Ib67999e270f42d58b5dcc0d0c88841ba78a3fcfd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-01 10:16:43.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:50:19.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46587/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/cbsasl/plain/check_password.cc(152): error C2039: "base64": is not a member of "cb" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46587/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17903/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/plain/check_password.cc:152:21: error: no member named "base64" in namespace "cb" [clang-diagnostic-error]
    auto salt = cb::base64::decode(metadata.getSalt());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/plain/check_password.cc:198:17: error: use of undeclared identifier "strstr" [clang-diagnostic-error]
            if (strstr(e.what(), "cb::cbsasl::User::getPassword") == nullptr) {
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17903/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: no member named "base64" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17903/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39150/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: no member named "base64" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39150/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20085/ : FAILURE

Compile error at [2022-06-01T10:48:47.333Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: ?cb::base64? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20085/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19741/ : FAILURE

Compile error at [2022-06-01T10:48:57.829Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: ?cb::base64? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19741/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20743/ : FAILURE

Compile error at [2022-06-01T10:48:51.727Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: no member named "base64" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28134/ : FAILURE

Compile error at [2022-06-01T10:50:05.110Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: no member named "base64" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7562/ : FAILURE

Compile error at [2022-06-01T10:48:34.435Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: no member named "base64" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7562/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7666/ : FAILURE

Compile error at [2022-06-01T10:27:48.565Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: ?cb::base64? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7666/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18932/ : FAILURE

Compile error at [2022-06-01T10:27:35.137Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/cbsasl/plain/check_password.cc:152:21:
error: no member named "base64" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18932/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16953/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
